--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -72,9 +72,10 @@ body {
   background-image: url('../img/background.jpg?1315884264');
   background-repeat: no-repeat;
   cursor: none !important;
+  overflow: hidden;
 }
 
-/* line 10, ../../sass/screen.scss */
+/* line 11, ../../sass/screen.scss */
 #guy, #ghost-guy {
   width: 373px;
   height: 600px;
@@ -83,17 +84,17 @@ body {
   top: 60px;
 }
 
-/* line 19, ../../sass/screen.scss */
+/* line 20, ../../sass/screen.scss */
 #guy {
   background-image: url('../img/guy.png?1315914348');
 }
 
-/* line 23, ../../sass/screen.scss */
+/* line 24, ../../sass/screen.scss */
 #ghost-guy {
   background-image: url('../img/ghost-guy.png?1315914172');
 }
 
-/* line 27, ../../sass/screen.scss */
+/* line 28, ../../sass/screen.scss */
 .bat {
   height: 100px;
   width: 100px;
@@ -108,12 +109,12 @@ body {
   top: 300px;
 }
 
-/* line 38, ../../sass/screen.scss */
+/* line 39, ../../sass/screen.scss */
 #crosshair {
   height: 40px;
   width: 40px;
   position: absolute;
-  background-image: url('../img/crosshair.png?1318197718');
+  background-image: url('../img/crosshair.png?1318198207');
   -moz-background-size: 40px, 40px;
   -webkit-background-size: 40px, 40px;
   -o-background-size: 40px, 40px;
@@ -122,7 +123,7 @@ body {
   z-index: 1000;
 }
 
-/* line 48, ../../sass/screen.scss */
+/* line 49, ../../sass/screen.scss */
 #gun {
   height: 440px;
   width: 449px;
@@ -133,7 +134,7 @@ body {
   -o-background-size: 440px, 449px;
   background-size: 440px, 449px;
   background-repeat: no-repeat;
-  right: -10px;
-  bottom: -10px;
+  right: -80px;
+  bottom: -80px;
   z-index: 100;
 }
