--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,6 +5,7 @@ body {
     @include background-image(image-url("background.jpg"));
     background-repeat: no-repeat;
     cursor: none !important;
+    overflow: hidden;
 }
 
 #guy, #ghost-guy {
@@ -52,8 +53,8 @@ body {
 
     @include sprited($image, $height, $width);
 
-    right: -10px;
-    bottom: -10px;
+    right: -80px;
+    bottom: -80px;
 
     z-index: 100;
 }
