--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -58,3 +58,16 @@ body {
 
     z-index: 100;
 }
+
+.bullet {
+    position: absolute;
+
+    height: 90px;
+    width: 90px;
+    @include border-radius(45px);
+
+    background-color: red;
+    border: 1px solid black;
+
+    z-index: 99;
+}
