--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -64,6 +64,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 /* line 3, ../../sass/screen.scss */
+::selection {
+  background-color: transparent;
+}
+
+/* line 7, ../../sass/screen.scss */
 body {
   -moz-background-size: cover;
   -webkit-background-size: cover;
@@ -75,7 +80,7 @@ body {
   overflow: hidden;
 }
 
-/* line 11, ../../sass/screen.scss */
+/* line 15, ../../sass/screen.scss */
 #guy, #ghost-guy {
   width: 373px;
   height: 600px;
@@ -84,17 +89,17 @@ body {
   top: 60px;
 }
 
-/* line 20, ../../sass/screen.scss */
+/* line 24, ../../sass/screen.scss */
 #guy {
   background-image: url('../img/guy.png?1315914348');
 }
 
-/* line 24, ../../sass/screen.scss */
+/* line 28, ../../sass/screen.scss */
 #ghost-guy {
   background-image: url('../img/ghost-guy.png?1315914172');
 }
 
-/* line 28, ../../sass/screen.scss */
+/* line 32, ../../sass/screen.scss */
 .bat {
   height: 100px;
   width: 100px;
@@ -109,7 +114,7 @@ body {
   top: 300px;
 }
 
-/* line 39, ../../sass/screen.scss */
+/* line 43, ../../sass/screen.scss */
 #crosshair {
   height: 40px;
   width: 40px;
@@ -123,7 +128,7 @@ body {
   z-index: 1000;
 }
 
-/* line 49, ../../sass/screen.scss */
+/* line 53, ../../sass/screen.scss */
 #gun {
   height: 440px;
   width: 449px;
@@ -139,7 +144,7 @@ body {
   z-index: 100;
 }
 
-/* line 62, ../../sass/screen.scss */
+/* line 66, ../../sass/screen.scss */
 .bullet {
   position: absolute;
   height: 90px;
@@ -155,7 +160,7 @@ body {
   z-index: 99;
 }
 
-/* line 75, ../../sass/screen.scss */
+/* line 79, ../../sass/screen.scss */
 .hit {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -164,4 +169,43 @@ body {
   -khtml-border-radius: 10px;
   border-radius: 10px;
   background-color: red;
+}
+
+/* line 84, ../../sass/screen.scss */
+#hud {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: rgba(255, 255, 255, 0.8);
+  padding: 0.5em;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border-radius: 10px;
+  -moz-box-shadow: 0px 0px 5px #333333;
+  -webkit-box-shadow: 0px 0px 5px #333333;
+  -o-box-shadow: 0px 0px 5px #333333;
+  box-shadow: 0px 0px 5px #333333;
+}
+/* line 2, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/utilities/tables/_scaffolding.scss */
+#hud table th {
+  text-align: center;
+  font-weight: bold;
+}
+/* line 6, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/utilities/tables/_scaffolding.scss */
+#hud table td,
+#hud table th {
+  padding: 2px;
+}
+/* line 8, ../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/utilities/tables/_scaffolding.scss */
+#hud table td.numeric,
+#hud table th.numeric {
+  text-align: right;
+}
+/* line 94, ../../sass/screen.scss */
+#hud table td:nth-child(2) {
+  font-size: 1.5em;
 }
