--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -206,6 +206,11 @@ body {
   text-align: right;
 }
 /* line 94, ../../sass/screen.scss */
+#hud table td:nth-child(1) {
+  text-align: right;
+  padding-right: 0.5em;
+}
+/* line 98, ../../sass/screen.scss */
 #hud table td:nth-child(2) {
   font-size: 1.5em;
 }
