--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-    @include background-size(cover);
+    @include background-size(150%);
     @include background-image(image-url("background.jpg"));
     background-repeat: no-repeat;
     overflow: hidden;
@@ -16,19 +16,9 @@ body {
     font-family: "Wallpoet";
 }
 
-#zombie {
-    $image: "guy.png";
-    $height: 600px;
-    $width: 373px;
-    @include sprited($image, $height, $width);
-    position: absolute;
-    left: 300px;
-    top: 60px;
-}
-
 .bat {
     $image: "bat.png";
-    $height: 100px;
+    $height: 175px;
     $width: $height;
     @include sprited($image, $height, $width);
     left: 50%;
